# elliptic_curve

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: gtest.yml
src/: CMakeLists.txt  main.c  randombytes.c
tests/: CMakeLists.txt  test_randombytes.cpp  test_tweetnacl.cpp
tweetnacl/include/: randombytes.h  tweetnacl.h
tweetnacl/tests/: CMakeLists.txt  test_tweetnacl.cpp
